--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,33 +1,137 @@
-header{
-    border: 3px solid black;
-    font-size: 20px;
-    text-align: center;
-    margin: 50px auto;
-    height: 300px;
-    width: 80%;
+
+body {
+  background-image: url(../images/bg.jpg);
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  color: #fff;
+  height: 100%;
+  text-align: center;
+  font-size: 18px;
 }
 
-.Underscore{
-    border: 3px solid black;
-    font-size: 100px;
-    text-align: center;
-    margin: 50px auto;
-    height: 150px;
-    width: 80%;
+.wrappper {
+  width: 100%;
+  margin: 0 auto;
 }
-.RightGuess{
-    border: 3px solid black;
-    font-size: 50px;
-    text-align: center;
-    margin: 50px auto;
-    height: 150px;
-    width: 80%;
+.wrappper:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-.WrongGuess{
-    border: 3px solid black;
-    font-size: 50px;
-    text-align: center;
-    margin: 50px auto;
-    height: 150px;
-    width: 80%;
+
+canvas {
+  color: #fff;
+  border: #fff dashed 2px;
+  padding: 20px;
+}
+
+h1, h2, h3 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin: 5px 0;
+}
+
+h1 {
+  font-size: 2.6em;
+}
+
+h2 {
+  font-size: 1.6em;
+}
+
+p {
+  font-size: 1.6em;
+}
+
+#alphabet {
+  margin: 15px auto;
+  padding: 0;
+  max-width: 900px;
+}
+#alphabet:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#alphabet li {
+  float: left;
+  margin: 0 10px 10px 0;
+  list-style: none;
+  width: 35px;
+  height: 30px;
+  padding-top: 10px;
+  background: #fff;
+  color: red;
+  cursor: pointer;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border: solid 1px #fff;
+}
+#alphabet li:hover {
+  background: black;
+  border: solid 1px #fff;
+  color: #fff;
+}
+
+#my-word {
+  margin: 0;
+  display: block;
+  padding: 0;
+  display: block;
+  margin-bottom: 20px;
+}
+
+#my-word li {
+  position: relative;
+  list-style: none;
+  margin: 0;
+  display: inline-block;
+  padding: 0 10px;
+  font-size: 1.6em;
+}
+
+#mylives {
+  font-size: 1.6em;
+  text-align: center;
+  display: block;
+  margin-bottom: 20px;
+}
+
+button {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -khtml-border-radius: 5px;
+  background:red;
+  color: #fff;
+  border: solid 3px #fff;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
+  margin: 10px;
+  outline: none;
+}
+button:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background: #fff;
+  border: solid 1px #fff;
+  color: #c1d72e;
+}
+
+@media (max-width: 767px) {
+  #alphabet {
+    padding: 0 0 0 15px;
+  }
+}
+@media (max-width: 480px) {
+  #alphabet {
+    padding: 0 0 0 25px;
+  }
 }
